# policy-collection

./: .gitignore  README.md  _fetch_pe.bat  _pe_fetch.js  browse_db.py  config.yaml  fetch_page.js  fetch_pe_page.js  funds.json  main.py  package-lock.json  pe_data.json  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
.obsidian/: workspace.json
.playwright-cli/: page-2026-06-17T16-22-53-918Z.yml  page-2026-06-17T16-23-10-591Z.yml  page-2026-06-17T16-25-33-076Z.yml  page-2026-06-17T16-28-22-364Z.yml  page-2026-06-18T14-52-20-520Z.yml  page-2026-06-23T12-26-15-947Z.yml
.reasonix/truncated-results/: 1781437574656-d6660f6d-web_fetch.txt
.reasonix/visuals/: architecture.html
reports/: 2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-25.md  2026-06-26.md  2026-06-27.md  2026-06-28.md  2026-06-29.md  2026-06-30.md  db-browse-2026-06-25.md  db-browse-2026-06-26.md  db-browse-2026-06-27.md  db-browse-2026-06-28.md  db-browse-2026-06-29.md  predictions.md
reports/.claudian/: claudian-settings.json
reports/.obsidian/: workspace.json
reports/xwlb/: 2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25-analysis.md  2026-06-25.md  2026-06-26-analysis.md  2026-06-26.md  (+9 more)
src/: analyzer.py  backtest.py  config.py  db.py  funds.py  market_data.py  models.py  pe_fetcher.py  pred_tracker.py  reporter.py  validator.py
tests/: conftest.py  test_analyzer.py  test_config.py  test_db.py  test_models.py
(+31 files in other folders)
